multpule fix: width exceeds 100%;button too large;panel footer text not aligned at middle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,3 +132,11 @@ line-height: 1em;
   background-size: cover !important;
   color: white;
 }
+
+
+
+
+
+.btn-wrap {
+  white-space: normal;
+}
